# vehicle-comparison-app

./: .gitignore  README.md
backend/: .env.example
backend/app/: config.py  main.py
backend/app/agents/: ad_details_extractor_agent.py  sri_lankan_ad_finder_agent.py  vehicle_comparison_agent.py
backend/app/api/routes/: analysis.py  health.py
backend/app/crew/: crew_config.py  vehicle_analysis_crew.py
backend/app/models/: ad_models.py  vehicle_models.py
backend/app/services/: analysis_service.py  data_processing_service.py
backend/app/tools/: sri_lankan_sites_tool.py  web_scraper_tool.py  web_search_tool.py
backend/app/utils/: formatters.py
backend/vehicle_comparison_backend/: README.md  pyproject.toml
backend/vehicle_comparison_backend/src/vehicle_comparison_backend/: __init__.py  api.py  crew.py  main.py
backend/vehicle_comparison_backend/src/vehicle_comparison_backend/config/: agents.yaml  tasks.yaml
backend/vehicle_comparison_backend/src/vehicle_comparison_backend/tools/: __init__.py  web_scraper.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/(pages)/home/: page.jsx
