[project]
name = "vehicle_comparison_backend"
version = "0.1.0"
description = "vehicle-comparison-backend using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
vehicle_comparison_backend = "vehicle_comparison_backend.main:run"
run_crew = "vehicle_comparison_backend.main:run"
train = "vehicle_comparison_backend.main:train"
replay = "vehicle_comparison_backend.main:replay"
test = "vehicle_comparison_backend.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
